[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-z3-prover"
version = "0.1.0"
description = "MCP server exposing Z3 solver API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "fastmcp>=2.0.0",
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-z3-prover[dev,test,lint]"]

[project.scripts]
mcp-z3-prover = "mcp_z3_prover.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-z3-prover"
Repository = "https://github.com/daedalus/mcp-z3-prover"
Issues = "https://github.com/daedalus/mcp-z3-prover/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_z3_prover"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_z3_prover"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "ANN201", "ANN001", "ARG002", "ARG001", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "ANN", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
